# Rewind

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
src/: autostart.rs  buffer.rs  clipboard.rs  config.rs  crashlog.rs  gui.rs  main.rs  media.rs  pipeline.rs
src/capture/: mod.rs  wayland.rs  x11.rs
src/encode/: gstreamer.rs  mod.rs
src/hotkey/: mod.rs  portal.rs
