[package]
name = "rewind"
version = "0.1.1"
edition = "2021"
description = "Lightweight, privacy-respecting game clip recorder for Linux — a ShadowPlay / Xbox Game Bar alternative."
license = "MIT"
repository = "https://github.com/codingmachineedge/Rewind"
readme = "README.md"
keywords = ["game", "capture", "recording", "shadowplay", "linux"]
categories = ["multimedia::video", "gui"]

[[bin]]
name = "rewind"
path = "src/main.rs"

[features]
default = []

# Convenience: the whole native Linux app.
linux = ["gui", "capture-wayland", "capture-x11", "encode-gstreamer", "hotkey"]

# Native GUI (GTK4 + libadwaita). Needs GTK4 + libadwaita dev libs + pkg-config.
gui = ["dep:gtk4", "dep:libadwaita"]

# Wayland capture via xdg-desktop-portal ScreenCast + PipeWire.
capture-wayland = ["dep:ashpd", "dep:pipewire", "dep:pollster", "dep:libc"]

# X11 capture via XShm / XComposite.
capture-x11 = ["dep:x11rb", "dep:libc"]

# Hardware encode + mux via GStreamer (VA-API / NVENC / x264).
encode-gstreamer = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]

# Global hotkey via portal GlobalShortcuts, with an evdev fallback.
hotkey = ["dep:ashpd", "dep:pollster", "dep:evdev"]

[dependencies]
# --- GUI (feature `gui`) ---
gtk4 = { version = "0.9", optional = true }
libadwaita = { version = "0.7", optional = true, features = ["v1_4"] }

# --- Wayland capture (feature `capture-wayland`) ---
ashpd = { version = "0.9", optional = true }
pipewire = { version = "0.8", optional = true }
libc = { version = "0.2", optional = true }

# --- X11 capture (feature `capture-x11`) ---
x11rb = { version = "0.13", optional = true, features = ["shm", "composite"] }

# --- Encode/mux (feature `encode-gstreamer`) ---
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }

# --- Hotkey (feature `hotkey`) ---
evdev = { version = "0.12", optional = true }

# --- Shared async glue for portal (ashpd) calls ---
pollster = { version = "0.3", optional = true }

[profile.release]
# Favor a small, low-overhead binary — this tool runs alongside games.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
